# reduced-embeddings-analysis-icprs

./: .gitattributes  Cargo.toml  README.md  flake.nix
data/: lfw-pairs.txt  pairs_CPLFW.txt
data/models/: retinaface-anchors-250x250.json
src/: arcface.rs  cplfw.rs  lfw.rs  main.rs  misc.rs
