[package]
name = "reducedemb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
face = { git = "https://git.ins.jku.at/proj/digidow/face-lib.git" }
csv = "1.1"
serde = {version="1.0", features=["derive"]}
serde_json = "1.0"
kdam = "0.3"
log = "0.4"
image = "0.24.5"
rand = "0.8"
itertools = "0.11"
pico-args = "0.5"
